Fix bug and update ReturnServiceTest